<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/BtnRenrenLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:text="@string/renren_need_auth"
        />
	
	<Button
	    android:id="@+id/BtnTengxunLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:text="@string/tengxun_need_auth"
        />
	
	<Button
	    android:id="@+id/BtnSinaLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:text="@string/sina_need_auth"
        />
</LinearLayout>
