<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pvr_user_pager"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent" 
        android:orientation="vertical"
    	/>
       <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="40sp"
	    android:orientation="vertical"
	    android:padding="0sp" 
   		>
       	<ImageView
               android:id="@+id/cursor"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="2sp"
               android:layout_gravity="left"
               android:background="@drawable/nav_bar_focus"
               android:contentDescription="@string/app_name"
               android:gravity="left"
               android:src="@drawable/nav_bar_focus"
               />
  		 <LinearLayout
	         android:layout_width="fill_parent"
	         android:layout_height="match_parent"
	         android:layout_marginLeft="3sp"
	         android:layout_marginRight="3sp"
	         android:orientation="horizontal"
	         >
             <TextView
                 android:id="@+id/TvwRenren"
                 android:layout_width="0sp"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/renren"
                 android:textColor="#969696"
                 android:textSize="17sp" 
                 />
             <TextView
                 android:id="@+id/TvwSina"
                 android:layout_width="0sp"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="#969696"
                 android:text="@string/sina"
                 android:textSize="17sp" 
                 />
             <TextView
                 android:id="@+id/TvwTengxun"
                 android:layout_width="0sp"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/tengxun"
                 android:textColor="#969696"
                 android:textSize="17sp" 
                 />
              <TextView
                 android:id="@+id/TvwOauth"
                 android:layout_width="0sp"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/oauty"
                 android:textColor="#969696"
                 android:textSize="17sp" 
                 />
       	</LinearLayout>
 	</LinearLayout>
</LinearLayout>
